--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "dev": "cross-env NODE_ENV=development node server.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "p-queue": "^7.4.1"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
